--- a/src/css/style.css
+++ b/src/css/style.css
@@ -27,6 +27,7 @@ div{
     justify-content: center;
     align-items: center;
     height: 100vh;
+    margin: auto;
 }
 
 .contenedor{
@@ -41,6 +42,7 @@ div{
 .contenedor:hover{
     transition: 0.5s;
     background-color: cornflowerblue;
+    border-radius: 100%;
 }
 
 input{
